// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardsPurchasedScreen should render with data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardsPurchasedScreen
    copy={
      Object {
        "aviosConfirmed": Object {
          "cancelButtonText": "",
          "message": "",
          "title": "",
        },
        "empty": Object {
          "ctaLabel": "",
          "heading": "",
          "subheading": "",
        },
        "lockedReward": Object {
          "ctaLabel": "",
          "heading": "",
          "subheading": "",
        },
        "notEnoughCoins": Object {
          "ctaLabel": "",
          "heading": "",
          "subheading": "",
        },
        "offline": Object {
          "ctaLabel": "",
          "heading": "",
          "subheading": "",
        },
        "voucherNotAvailable": Object {
          "ctaLabel": "",
          "heading": "",
          "subheading": "",
        },
      }
    }
    data={
      Array [
        Object {
          "cost": "123",
          "day": "Monday",
          "id": "id",
          "month": "April",
          "onPress": [MockFunction],
          "reward": "string",
          "status": "pending",
        },
      ]
    }
    labels={Array []}
    loading={false}
    navbarColour="light"
    onLeftMenuPress={[MockFunction]}
    onLeftTabPress={[MockFunction]}
    onRightTabPress={[MockFunction]}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          onPressLeftIcon={[MockFunction]}
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "marginTop": 34,
            }
          }
        >
          <RewardTabs
            activeTabIndex={1}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />
        </View>,
        <View
          style={
            Object {
              "flex": 1,
              "marginBottom": 105,
              "paddingHorizontal": 30,
            }
          }
        >
          <LargeList
            data={
              Array [
                Object {
                  "items": Array [
                    Object {
                      "cost": "123",
                      "day": "Monday",
                      "id": "id",
                      "month": "April",
                      "onPress": [MockFunction],
                      "reward": "string",
                      "status": "pending",
                    },
                  ],
                },
              ]
            }
            groupCount={4}
            groupMinHeight={444.6666666666667}
            heightForIndexPath={[Function]}
            heightForSection={[Function]}
            onRefresh={[Function]}
            refreshHeader={[Function]}
            renderEmpty={[Function]}
            renderIndexPath={[Function]}
            renderSection={[Function]}
            updateTimeInterval={150}
          />
        </View>,
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "paddingBottom": 34,
              "paddingTop": 16,
              "position": "absolute",
              "right": 0,
            }
          }
        >
          <NavBar
            activeIndex={3}
            colour="light"
            hasImage={true}
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "style": Object {
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardTabs
            activeTabIndex={1}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />,
          "style": Object {
            "alignItems": "center",
            "marginTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeTabIndex": 1,
            "onLeftTabPress": [MockFunction],
            "onRightTabPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <LargeList
            data={
              Array [
                Object {
                  "items": Array [
                    Object {
                      "cost": "123",
                      "day": "Monday",
                      "id": "id",
                      "month": "April",
                      "onPress": [MockFunction],
                      "reward": "string",
                      "status": "pending",
                    },
                  ],
                },
              ]
            }
            groupCount={4}
            groupMinHeight={444.6666666666667}
            heightForIndexPath={[Function]}
            heightForSection={[Function]}
            onRefresh={[Function]}
            refreshHeader={[Function]}
            renderEmpty={[Function]}
            renderIndexPath={[Function]}
            renderSection={[Function]}
            updateTimeInterval={150}
          />,
          "style": Object {
            "flex": 1,
            "marginBottom": 105,
            "paddingHorizontal": 30,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "data": Array [
              Object {
                "items": Array [
                  Object {
                    "cost": "123",
                    "day": "Monday",
                    "id": "id",
                    "month": "April",
                    "onPress": [MockFunction],
                    "reward": "string",
                    "status": "pending",
                  },
                ],
              },
            ],
            "groupCount": 4,
            "groupMinHeight": 444.6666666666667,
            "heightForIndexPath": [Function],
            "heightForSection": [Function],
            "onRefresh": [Function],
            "refreshHeader": [Function],
            "renderEmpty": [Function],
            "renderIndexPath": [Function],
            "renderSection": [Function],
            "updateTimeInterval": 150,
          },
          "ref": [Function],
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={3}
            colour="light"
            hasImage={true}
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "rgb(255,255,255)",
            "bottom": 0,
            "left": 0,
            "paddingBottom": 34,
            "paddingTop": 16,
            "position": "absolute",
            "right": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 3,
            "colour": "light",
            "currentWorld": undefined,
            "hasImage": true,
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "marginTop": 34,
              }
            }
          >
            <RewardTabs
              activeTabIndex={1}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />
          </View>,
          <View
            style={
              Object {
                "flex": 1,
                "marginBottom": 105,
                "paddingHorizontal": 30,
              }
            }
          >
            <LargeList
              data={
                Array [
                  Object {
                    "items": Array [
                      Object {
                        "cost": "123",
                        "day": "Monday",
                        "id": "id",
                        "month": "April",
                        "onPress": [MockFunction],
                        "reward": "string",
                        "status": "pending",
                      },
                    ],
                  },
                ]
              }
              groupCount={4}
              groupMinHeight={444.6666666666667}
              heightForIndexPath={[Function]}
              heightForSection={[Function]}
              onRefresh={[Function]}
              refreshHeader={[Function]}
              renderEmpty={[Function]}
              renderIndexPath={[Function]}
              renderSection={[Function]}
              updateTimeInterval={150}
            />
          </View>,
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "paddingBottom": 34,
                "paddingTop": 16,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <NavBar
              activeIndex={3}
              colour="light"
              hasImage={true}
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "style": Object {
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardTabs
              activeTabIndex={1}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />,
            "style": Object {
              "alignItems": "center",
              "marginTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeTabIndex": 1,
              "onLeftTabPress": [MockFunction],
              "onRightTabPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <LargeList
              data={
                Array [
                  Object {
                    "items": Array [
                      Object {
                        "cost": "123",
                        "day": "Monday",
                        "id": "id",
                        "month": "April",
                        "onPress": [MockFunction],
                        "reward": "string",
                        "status": "pending",
                      },
                    ],
                  },
                ]
              }
              groupCount={4}
              groupMinHeight={444.6666666666667}
              heightForIndexPath={[Function]}
              heightForSection={[Function]}
              onRefresh={[Function]}
              refreshHeader={[Function]}
              renderEmpty={[Function]}
              renderIndexPath={[Function]}
              renderSection={[Function]}
              updateTimeInterval={150}
            />,
            "style": Object {
              "flex": 1,
              "marginBottom": 105,
              "paddingHorizontal": 30,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "data": Array [
                Object {
                  "items": Array [
                    Object {
                      "cost": "123",
                      "day": "Monday",
                      "id": "id",
                      "month": "April",
                      "onPress": [MockFunction],
                      "reward": "string",
                      "status": "pending",
                    },
                  ],
                },
              ],
              "groupCount": 4,
              "groupMinHeight": 444.6666666666667,
              "heightForIndexPath": [Function],
              "heightForSection": [Function],
              "onRefresh": [Function],
              "refreshHeader": [Function],
              "renderEmpty": [Function],
              "renderIndexPath": [Function],
              "renderSection": [Function],
              "updateTimeInterval": 150,
            },
            "ref": [Function],
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={3}
              colour="light"
              hasImage={true}
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "paddingBottom": 34,
              "paddingTop": 16,
              "position": "absolute",
              "right": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 3,
              "colour": "light",
              "currentWorld": undefined,
              "hasImage": true,
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`RewardsPurchasedScreen should render without data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RewardsPurchasedScreen
    copy={
      Object {
        "aviosConfirmed": Object {
          "cancelButtonText": "",
          "message": "",
          "title": "",
        },
        "empty": Object {
          "ctaLabel": "",
          "heading": "",
          "subheading": "",
        },
        "lockedReward": Object {
          "ctaLabel": "",
          "heading": "",
          "subheading": "",
        },
        "notEnoughCoins": Object {
          "ctaLabel": "",
          "heading": "",
          "subheading": "",
        },
        "offline": Object {
          "ctaLabel": "",
          "heading": "",
          "subheading": "",
        },
        "voucherNotAvailable": Object {
          "ctaLabel": "",
          "heading": "",
          "subheading": "",
        },
      }
    }
    data={Array []}
    labels={Array []}
    loading={false}
    navbarColour="light"
    onLeftMenuPress={[MockFunction]}
    onLeftTabPress={[MockFunction]}
    onRightTabPress={[MockFunction]}
    totalCoins={1234}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TopBar
          coins={1234}
          onPressLeftIcon={[MockFunction]}
        />,
        <View
          style={
            Object {
              "alignItems": "center",
              "marginTop": 34,
            }
          }
        >
          <RewardTabs
            activeTabIndex={1}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />
        </View>,
        <View
          style={
            Object {
              "flex": 1,
              "marginBottom": 105,
              "paddingHorizontal": 30,
            }
          }
        >
          <LargeList
            data={
              Array [
                Object {
                  "items": Array [],
                },
              ]
            }
            groupCount={4}
            groupMinHeight={444.6666666666667}
            heightForIndexPath={[Function]}
            heightForSection={[Function]}
            onRefresh={[Function]}
            refreshHeader={[Function]}
            renderEmpty={[Function]}
            renderIndexPath={[Function]}
            renderSection={[Function]}
            updateTimeInterval={150}
          />
        </View>,
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "paddingBottom": 34,
              "paddingTop": 16,
              "position": "absolute",
              "right": 0,
            }
          }
        >
          <NavBar
            activeIndex={3}
            colour="light"
            hasImage={true}
            hasNotification={false}
            labels={Array []}
          />
        </View>,
      ],
      "style": Object {
        "flex": 1,
        "flexDirection": "column",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "coins": 1234,
          "onPressLeftIcon": [MockFunction],
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <RewardTabs
            activeTabIndex={1}
            onLeftTabPress={[MockFunction]}
            onRightTabPress={[MockFunction]}
          />,
          "style": Object {
            "alignItems": "center",
            "marginTop": 34,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "activeTabIndex": 1,
            "onLeftTabPress": [MockFunction],
            "onRightTabPress": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <LargeList
            data={
              Array [
                Object {
                  "items": Array [],
                },
              ]
            }
            groupCount={4}
            groupMinHeight={444.6666666666667}
            heightForIndexPath={[Function]}
            heightForSection={[Function]}
            onRefresh={[Function]}
            refreshHeader={[Function]}
            renderEmpty={[Function]}
            renderIndexPath={[Function]}
            renderSection={[Function]}
            updateTimeInterval={150}
          />,
          "style": Object {
            "flex": 1,
            "marginBottom": 105,
            "paddingHorizontal": 30,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "data": Array [
              Object {
                "items": Array [],
              },
            ],
            "groupCount": 4,
            "groupMinHeight": 444.6666666666667,
            "heightForIndexPath": [Function],
            "heightForSection": [Function],
            "onRefresh": [Function],
            "refreshHeader": [Function],
            "renderEmpty": [Function],
            "renderIndexPath": [Function],
            "renderSection": [Function],
            "updateTimeInterval": 150,
          },
          "ref": [Function],
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <NavBar
            activeIndex={3}
            colour="light"
            hasImage={true}
            hasNotification={false}
            labels={Array []}
          />,
          "style": Object {
            "alignItems": "center",
            "backgroundColor": "rgb(255,255,255)",
            "bottom": 0,
            "left": 0,
            "paddingBottom": 34,
            "paddingTop": 16,
            "position": "absolute",
            "right": 0,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeIndex": 3,
            "colour": "light",
            "currentWorld": undefined,
            "hasImage": true,
            "hasNotification": false,
            "labels": Array [],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TopBar
            coins={1234}
            onPressLeftIcon={[MockFunction]}
          />,
          <View
            style={
              Object {
                "alignItems": "center",
                "marginTop": 34,
              }
            }
          >
            <RewardTabs
              activeTabIndex={1}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />
          </View>,
          <View
            style={
              Object {
                "flex": 1,
                "marginBottom": 105,
                "paddingHorizontal": 30,
              }
            }
          >
            <LargeList
              data={
                Array [
                  Object {
                    "items": Array [],
                  },
                ]
              }
              groupCount={4}
              groupMinHeight={444.6666666666667}
              heightForIndexPath={[Function]}
              heightForSection={[Function]}
              onRefresh={[Function]}
              refreshHeader={[Function]}
              renderEmpty={[Function]}
              renderIndexPath={[Function]}
              renderSection={[Function]}
              updateTimeInterval={150}
            />
          </View>,
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(255,255,255)",
                "bottom": 0,
                "left": 0,
                "paddingBottom": 34,
                "paddingTop": 16,
                "position": "absolute",
                "right": 0,
              }
            }
          >
            <NavBar
              activeIndex={3}
              colour="light"
              hasImage={true}
              hasNotification={false}
              labels={Array []}
            />
          </View>,
        ],
        "style": Object {
          "flex": 1,
          "flexDirection": "column",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "coins": 1234,
            "onPressLeftIcon": [MockFunction],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <RewardTabs
              activeTabIndex={1}
              onLeftTabPress={[MockFunction]}
              onRightTabPress={[MockFunction]}
            />,
            "style": Object {
              "alignItems": "center",
              "marginTop": 34,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "activeTabIndex": 1,
              "onLeftTabPress": [MockFunction],
              "onRightTabPress": [MockFunction],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <LargeList
              data={
                Array [
                  Object {
                    "items": Array [],
                  },
                ]
              }
              groupCount={4}
              groupMinHeight={444.6666666666667}
              heightForIndexPath={[Function]}
              heightForSection={[Function]}
              onRefresh={[Function]}
              refreshHeader={[Function]}
              renderEmpty={[Function]}
              renderIndexPath={[Function]}
              renderSection={[Function]}
              updateTimeInterval={150}
            />,
            "style": Object {
              "flex": 1,
              "marginBottom": 105,
              "paddingHorizontal": 30,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "data": Array [
                Object {
                  "items": Array [],
                },
              ],
              "groupCount": 4,
              "groupMinHeight": 444.6666666666667,
              "heightForIndexPath": [Function],
              "heightForSection": [Function],
              "onRefresh": [Function],
              "refreshHeader": [Function],
              "renderEmpty": [Function],
              "renderIndexPath": [Function],
              "renderSection": [Function],
              "updateTimeInterval": 150,
            },
            "ref": [Function],
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <NavBar
              activeIndex={3}
              colour="light"
              hasImage={true}
              hasNotification={false}
              labels={Array []}
            />,
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "rgb(255,255,255)",
              "bottom": 0,
              "left": 0,
              "paddingBottom": 34,
              "paddingTop": 16,
              "position": "absolute",
              "right": 0,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeIndex": 3,
              "colour": "light",
              "currentWorld": undefined,
              "hasImage": true,
              "hasNotification": false,
              "labels": Array [],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
